cambios realizados por jammy y paco

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -92,7 +92,7 @@ header
     color #514C37
     margin 0px
     &::after
-      background url(style/conchas-de-colores.png)no-repeat center
+      background url(style/conchas-de-colores.png)no-repeat center !important
   h4
     color #927B5A
   figure
