cambios a las imaenes y responsive 2

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -258,4 +258,8 @@ iframe
       vertical-align bottom
       p
         text-align left
-        
+@media(min-width:900px)   
+  section
+    article
+      width 440px
+      margin 1%
