cambios a las imaenes y responsive 2

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -259,7 +259,31 @@ iframe
       p
         text-align left
 @media(min-width:900px)   
-  section
+  .date
     article
-      width 440px
+      width 400px
       margin 1%
+      display inline-block
+  .vestimenta
+    article
+      width 400px
+      margin 1%
+  .mesa_de_regalos 
+    article
+      width 400px
+      margin 1%
+@media(min-width:1024px)   
+  .date
+    article
+      width 600px
+      margin 1%
+      display inline-block
+  .vestimenta
+    article
+      width 600px
+      margin 1%
+  .mesa_de_regalos 
+    article
+      width 600px
+      margin 1%
+
