cambios a las imaenes y responsive 2

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -165,10 +165,11 @@
     p 
       font-family 'alex_brushregular'
       color #6d6d6d
-      font-size 2em
+      font-size 1.6em
     &.icon-whatsapp::before
       color #6d6d6d
       font-size 59px
+      display inline-block
   &::before
     font-family "icon"
     content "eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee"
@@ -258,6 +259,9 @@ iframe
       vertical-align bottom
       p
         text-align left
+  .boton
+      width 250px
+      display inline-block
 @media(min-width:900px)   
   .date
     article
@@ -272,7 +276,29 @@ iframe
     article
       width 400px
       margin 1%
-@media(min-width:1024px)   
+  .contacto 
+    article
+      width 400px
+      margin 1%
+      display inline-block
+    div
+      width 41%
+      display inline-block
+
+
+@media(min-width:1024px)
+
+  header
+    h1
+      font-size 5em
+    img
+      width 340px;   
+  section
+    h2
+      margin-top 14px
+      font-size 3em
+    article
+      padding-bottom 20px
   .date
     article
       width 600px
